[package]
name = "floneum_rust_macro"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff <evanalmloff@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.18", features = ["full"] }
proc-macro2 = "1"
quote = "1"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "285f0c6ad5da3d6cd8ef2e0635df51f229d6578f" }
convert_case = "0.6.0"
